JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/a02.c
ALGORITHM(a02){
  x=y+1;
  return x;
}