JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test12.c
ALGORITHM(test12){
	comment  = ca = va;
}
